--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,88 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+
+@keyframes sparks {
+  from {
+    filter: opacity(1);
+  }
+
+  to {
+    filter: opacity(0);
+  }
+}
+
+@keyframes heart {
+  from {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(1.25);
+  }
+}
+
+.core {
+  color: transparent;
+  transition: color 0.3s 0.03s linear;
+}
+
+.contur {
+  color: black;
+  transition: color 0.1s linear;
+}
+
+.main-body {
+  color: transparent;
+  transition: color 0.3s linear;
+}
+
+.sparks {
+  color: red;
+  filter: opacity(0);
+}
+
+.like-icon:hover .core {
+  color: rgb(0, 0, 0);
+  transition: color 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  color: rgb(0, 0, 0);
+  transition: color 0.3s 0.05s linear;
+}
+
+.like-icon:active .core {
+  color: rgb(255, 0, 0);
+  transition: color 0.3s linear;
+}
+
+.like-icon:active .main-body {
+  color: rgb(255, 0, 0);
+  transition: color 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .contour {
+  color: red;
+  transition: color 0.3s linear;
+}
+
+.like-icon.is-liked .core {
+  color: red;
+  transition: color 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  color: rgb(255, 0, 0);
+  transition: color 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .heart {
+  color: rgb(255, 0, 0);
+  transition: color 0.3s 0.05s linear;
+  animation: heart 0.3s 0.1s ease-in;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s 0.3s ease-in;
+}
