--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,15 +2,8 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url(./Inter-Variable.woff2) format('woff2');
-    font-weight: 400;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: 'Inter';
-    src: url(./Inter-Variable.woff2) format('woff2');
-    font-weight: 700;
+    src: url(./Inter-Variable.woff2) format('woff2'),
+         url(./Inter-Variable.woff2) format('woff2-variations');
     font-display: swap;
   }
   
