--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,4 +3,6 @@
   --color-text: #000000;
   --color-fon: #fff;
   --color-shadow: rgb(255, 255, 255, 1);
+  --text-normal:400;
+  --text-bold:700;
 }
